[package]
name = "lockboxer"
description = "Configurable fork of Lockbox encryption library."
readme = "README.md"
keywords = ["encryption", "aes", "gcm", "vault", "crypto"]
license = "MIT"
repository = "https://github.com/kimlindholm/lockboxer"
homepage = "https://github.com/kimlindholm/lockboxer"
documentation = "https://docs.rs/lockboxer"
version = "0.2.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
thiserror = "2.0.16"

[dev-dependencies]
hex = "0.4.3"
