[package]
name = "lockboxer"
description = "Configurable fork of Lockbox encryption library."
readme = "README.md"
keywords = ["encryption", "aes", "gcm", "vault", "crypto"]
license = "MIT"
repository = "https://github.com/kimlindholm/lockboxer"
homepage = "https://github.com/kimlindholm/lockboxer"
documentation = "https://docs.rs/lockboxer"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
aes-gcm = { version = "0.11.0", features = ["zeroize"] }
thiserror = "2.0.19"
zeroize = { version = "1.9.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
hex = "0.4.3"
